# Genshin-Roles

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  docker-compose.yml
migrations/: 001_initial_schema.sql  002_add_indexes.sql  003_extract_fields.sql  004_user_guilds.sql  005_discord_tokens.sql  006_performance_indexes.sql  007_abyss_progress.sql  008_discord_name.sql  009_guild_name.sql  010_abyss_stars.sql  011_view_permission.sql  012_guild_settings.sql  013_drop_discord_tables.sql
src/: config.rs  db.rs  error.rs  main.rs  schema.rs
src/models/: condition.rs  mod.rs  player.rs  role_link.rs  verification.rs
src/routes/: health.rs  mod.rs  players.rs  plugin.rs  verification.rs
src/services/: condition_eval.rs  discord_oauth.rs  enka.rs  mod.rs  rolelogic.rs  sync.rs
src/tasks/: config_sync_worker.rs  guild_refresh_worker.rs  mod.rs  refresh_worker.rs  sync_worker.rs
